--- a/public/index.html
+++ b/public/index.html
@@ -577,17 +577,24 @@
                 <label for="name">
                     ลงชื่อผู้ออกใบสั่ง <br> Signed :<input type="text" id="zip" class="b" placeholder="" required>
                   </label>
-                <div class="row">
+                <class class="row">
                     <div class="col-md-2 ">
                         <label for="yos">ยศ(Rank)</label>
                         <input type="text" id="ํyos" class="form-control" placeholder="ยศ" required></div>
                     <div class="col-md-4 mb-2">
                         <label for="policename">ชื่อ-นามสกุล(First Name & Last Name)</label>
                         <input type="text" id="policename" class="form-control" placeholder="ชื่อ-นามสกุล" required></div>
-                    <div class="col-md-6">
-                        >รหัส(Code) <br><input type="text" id="zip" placeholder=""></div>
-                </div>
-                <button class="button button3">Next page</button>
+                    <div class="col-md-4 mb-2">
+                        >รหัส(Code) <br><input type="text" id="zip" placeholder=""></div><button onclick="document.location='https://bill-police2-87d6d.web.app'">Next page</button></class>
+
+
+    </div>
+
+
+
+
+
+
 </body>
 
 </html>
